mywork/force-app/main/default/objects/ALM_Error__c/ALM_Error__c.object-meta.xml
<CustomObject>
    <label>ALM Error</label>
    <nameField>
        <displayFormat>AE-{000000}</displayFormat>
        <label>ALM Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ALM Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>