mywork/force-app/main/default/objects/ALM_Error__c/fields/ALM_User__c.field-meta.xml
<CustomField>
    <fullName>ALM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ALM User</label>
    <referenceTo>ALM_User__c</referenceTo>
    <relationshipLabel>ALM Errors</relationshipLabel>
    <relationshipName>ALM_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>