mywork/force-app/main/default/objects/ALM_Error__c/fields/Build__c.field-meta.xml
<CustomField>
    <fullName>Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build</label>
    <referenceTo>Build__c</referenceTo>
    <relationshipLabel>ALM Errors</relationshipLabel>
    <relationshipName>ALM_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>