mywork/force-app/main/default/objects/ALM_Error__c/fields/Column__c.field-meta.xml
<CustomField>
    <fullName>Column__c</fullName>
    <label>Column</label>
    <length>15</length>
    <type>Text</type>
</CustomField>