mywork/force-app/main/default/objects/ALM_Error__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>ALM Errors</relationshipLabel>
    <relationshipName>ALM_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>