mywork/force-app/main/default/objects/ALM_Error__c/fields/Error_Cause__c.field-meta.xml
<CustomField>
    <fullName>Error_Cause__c</fullName>
    <label>Error Cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Missing Related Component</fullName>
            </value>
            <value>
                <fullName>Component Not Found</fullName>
            </value>
            <value>
                <fullName>Component Name Changed</fullName>
            </value>
            <value>
                <fullName>Unsupported Component Type</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>