mywork/force-app/main/default/objects/ALM_Error__c/fields/Error_Location__c.field-meta.xml
<CustomField>
    <fullName>Error_Location__c</fullName>
    <label>Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>