mywork/force-app/main/default/objects/ALM_Error__c/fields/VC_Commit__c.field-meta.xml
<CustomField>
    <fullName>VC_Commit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VC Commit</label>
    <referenceTo>VC_Commit__c</referenceTo>
    <relationshipLabel>ALM Errors</relationshipLabel>
    <relationshipName>ALM_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>