mywork/force-app/main/default/objects/ALM_Error__c/recordTypes/Apex.recordType-meta.xml
<RecordType>
    <fullName>Apex</fullName>
    <active>true</active>
    <description>An apex error during deployments/validations</description>
    <label>Apex</label>
</RecordType>