mywork/force-app/main/default/objects/ALM_Error__c/recordTypes/Build.recordType-meta.xml
<RecordType>
    <fullName>Build</fullName>
    <active>true</active>
    <description>Errors generated from Assembler</description>
    <label>Build</label>
</RecordType>