mywork/force-app/main/default/objects/ALM_Error__c/recordTypes/Code_Coverage.recordType-meta.xml
<RecordType>
    <fullName>Code_Coverage</fullName>
    <active>true</active>
    <description>Represents a component that has 0% code coverage</description>
    <label>Code Coverage</label>
</RecordType>