mywork/force-app/main/default/objects/ALM_Error__c/recordTypes/Component.recordType-meta.xml
<RecordType>
    <fullName>Component</fullName>
    <active>true</active>
    <description>Represents a component level error during deployments/validations</description>
    <label>Component</label>
</RecordType>